--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -325,7 +325,7 @@ body.disconnected > header {
 }
 
 #logocontainer:after {
-    font-family: "Roboto Mono";
+    font-family: "Roboto Mono", monospace;
     padding: 10px;
 }
 
@@ -749,7 +749,7 @@ runarea > span {
     right: 24px;
     width: 45px;
 
-    font-family: "Roboto Mono";
+    font-family: "Roboto Mono", monospace;
     font-size: 0.6em;
     font-style: italic;
     color: hsl(353, 5%, 64%);
@@ -895,7 +895,7 @@ dropruler {
 footer {
     width: 100%;
     height: 3.5rem;
-    font-family: "Roboto Mono";
+    font-family: "Roboto Mono", monospace;
     font-size: 0.75rem;
     background-color: #d7dcd3;
     color: #333333;
@@ -940,7 +940,7 @@ footer a {
 
 footer input {
     border: 2px solid #818181;
-    font-family: "Roboto Mono";
+    font-family: "Roboto Mono", monospace;
     border-radius: 3px 0 0 3px;
     padding: 3px;
     border-right: none;
@@ -953,7 +953,7 @@ footer button {
     border: 2px solid #896c6c;
     color: white;
     /* border: none; */
-    font-family: "Roboto Mono";
+    font-family: "Roboto Mono", monospace;
     font-weight: 600;
     font-size: 0.75rem;
 }
@@ -963,6 +963,48 @@ footer button {
     margin: 0 auto;
     padding: 1rem;
     text-align: right;
+}
+
+/* ARE YOU SURE */
+
+are-you-sure {
+    z-index: 20;
+    display: block;
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    margin: 0.75rem;
+    padding: 0.5rem;
+
+    font-family: "Roboto Mono", monospace;
+    font-size: 0.75rem;
+
+    background: white;
+    border-radius: 6px;
+
+    box-shadow: 00px 00px 10px 2px #0003;
+    opacity: 1;
+    transition: 0.2s linear box-shadow, 0.2s ease-out margin-bottom, 0.05s linear opacity;
+}
+
+are-you-sure.hidden {
+    margin-bottom: 0px;
+    box-shadow: 00px 00px 10px -5px #0003;
+    opacity: 0;
+    pointer-events: none;
+}
+
+@keyframes shadow-fadeout {
+    0% {
+        box-shadow: 00px 00px 10px 2px #0003;
+        opacity: 1;
+    }
+    80% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
 
 /* PRESENTATION MODE */
