--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -161,7 +161,7 @@ celloutput blockquote {
     margin-right: 1rem;
 }
 
-cell:not(.inline-output) celloutput pre,
+celloutput:not(.inline_output) pre,
 celloutput blockquote {
     margin-block-start: 0px;
     margin-block-end: var(--cell-spacing);
@@ -363,7 +363,7 @@ main > preamble > button > span::after {
     background-position-y: 1px;
 }
 
-body.code-differs > main > preamble > button {
+body.code_differs > main > preamble > button {
     display: block;
 }
 
@@ -371,7 +371,8 @@ body.code-differs > main > preamble > button {
 
 cell {
     display: block;
-    min-height: 1rem;
+    /* CodeMirror line height (defined by their JS somehow) + 1px border top + 1px border bottom */
+    min-height: calc(24px + 1px + 1px);
     margin-top: var(--cell-spacing);
     position: relative;
 }
@@ -390,11 +391,8 @@ celloutput:focus {
     outline: none;
 }
 
-cell.inline-output > celloutput {
+celloutput.inline_output {
     display: flex;
-}
-
-cell.inline-output > celloutput {
     padding-top: 3px;
     padding-bottom: 3px;
 }
@@ -417,7 +415,7 @@ celloutput > div {
     overflow-x: auto;
 }
 
-cell.inline-output > celloutput > div > pre {
+celloutput.inline_output > div > pre {
     display: flex;
 }
 
@@ -474,7 +472,6 @@ cell:hover > celloutput > div::-webkit-scrollbar-thumb {
 
 cellinput .CodeMirror {
     height: auto !important;
-    min-height: calc(28px - 1px - 1px);
     width: auto;
     z-index: 2;
     border-bottom-right-radius: 4px;
@@ -491,17 +488,17 @@ cellinput .CodeMirror-empty {
     color: rgba(0, 0, 0, 0.15);
 }
 
-cell.code-folded > cellinput {
+cell.code_folded > cellinput {
     display: none;
 }
 
-cell.output-notinsync > cellinput,
-cell.code-differs > cellinput {
+cell.output_notinsync > cellinput,
+cell.code_differs > cellinput {
     display: unset;
 }
 
-cell.output-notinsync > cellinput > .CodeMirror,
-cell.code-differs > cellinput > .CodeMirror {
+cell.output_notinsync > cellinput > .CodeMirror,
+cell.code_differs > cellinput > .CodeMirror {
     border: 1px solid hsla(46, 70%, 37%, 0.68);
     border-left: none;
 }
@@ -562,15 +559,15 @@ cellshoulder > button {
     padding: 0px 1px;
 }
 
-cell.code-folded.inline-output > cellshoulder > button {
+/* cell.code_folded.inline-output > cellshoulder > button {
     margin-top: 3px;
-}
+} */
 
 cellshoulder > button > span::after {
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/eye-outline.svg);
 }
 
-cell.code-folded > cellshoulder > button > span::after {
+cell.code_folded > cellshoulder > button > span::after {
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/eye-off-outline.svg);
 }
 
@@ -591,7 +588,7 @@ trafficlight {
 
 /* in ascending order of severity: */
 
-cell.code-folded > trafficlight {
+cell.code_folded > trafficlight {
     background: none;
 }
 
@@ -613,8 +610,8 @@ cell.selected > trafficlight {
     background: rgba(40, 78, 189, 0.4);
 }
 
-cell.output-notinsync > trafficlight,
-cell.code-differs > trafficlight {
+cell.output_notinsync > trafficlight,
+cell.code_differs > trafficlight {
     background: hsla(46, 70%, 37%, 0.68);
 }
 
@@ -789,23 +786,23 @@ cell.running > runarea > button.runcell > span::after {
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/stop-circle-outline.svg);
 }
 
-cell.code-folded > runarea {
+cell.code_folded > runarea {
     display: none;
 }
 
-cell.output-notinsync > runarea,
-cell.code-differs > runarea {
+cell.output_notinsync > runarea,
+cell.code_differs > runarea {
     display: block;
 }
 
 cell:focus-within > runarea,
-cell.output-notinsync > runarea,
-cell.code-differs > runarea {
+cell.output_notinsync > runarea,
+cell.code_differs > runarea {
     opacity: 100%;
 }
 
-cell.output-notinsync > runarea > button,
-cell.code-differs > runarea > button {
+cell.output_notinsync > runarea > button,
+cell.code_differs > runarea > button {
     animation-name: 👀;
     animation-duration: 4s;
     animation-iteration-count: infinite;
@@ -1117,8 +1114,8 @@ ul.CodeMirror-hints {
     border-right: solid 1px hsla(0, 0%, 0%, 0);
 }
 
-cell.output-notinsync .cm-s-default .CodeMirror-gutters,
-cell.code-differs .cm-s-default .CodeMirror-gutters {
+cell.output_notinsync .cm-s-default .CodeMirror-gutters,
+cell.code_differs .cm-s-default .CodeMirror-gutters {
     background: hsla(46, 70%, 88%, 1);
 }
 
