🧵 Future proof HTML element names

--- a/frontend/hide-ui.css
+++ b/frontend/hide-ui.css
@@ -8,16 +8,16 @@ body {
 
 body > header,
 preamble > button,
-cell > button,
-cellinput > button,
-cellshoulder,
+pluto-cell > button,
+pluto-input > button,
+pluto-shoulder,
 footer,
-runarea,
+pluto-runarea,
 #helpbox-wrapper {
     display: none !important;
 }
 
-celloutput img {
+pluto-output img {
     max-width: 80%;
     display: block;
     margin: 0 auto;
