--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -151,6 +151,8 @@ pluto-output code {
 pluto-output pre {
     display: inline-block;
     margin: 0px;
+    white-space: pre-wrap;
+    word-break: break-all;
     tab-size: 4;
     -moz-tab-size: 4; /* https://bugzilla.mozilla.org/show_bug.cgi?id=737785 */
     font-family: "Roboto Mono", monospace;
@@ -175,21 +177,30 @@ pluto-output blockquote {
 
 pluto-output table {
     border-collapse: collapse;
-    font-size: 0.7em;
-    font-family: Arial, Helvetica, sans-serif;
+    border: 2px solid rgba(0, 0, 0, 0.2);
+    border-left: none;
+    border-right: none;
+    margin: 0 auto;
+    margin-block-start: var(--pluto-cell-spacing);
+    margin-block-end: var(--pluto-cell-spacing);
 }
 
-pluto-output td, th {
-    border: 1px solid #ddd;
-    padding: 6px;
+pluto-output table > thead {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-pluto-output tr:nth-child(even) {
-    background-color: #f2f2f2;   
+pluto-output table > tbody td {
+    font-size: 0.75rem;
+    font-family: "Roboto Mono", monospace;
 }
 
-pluto-output tr:hover {
-    background-color: #ddd;   
+pluto-output table td,
+pluto-output table th {
+    padding: 0.2rem 0.5rem;
+}
+
+pluto-output table > tbody tr:hover {
+    background-color: rgba(224, 203, 158, 0.15);
 }
 
 /* HEADER */
