--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -26,14 +26,22 @@ main {
     margin: 0 auto;
     margin-top: 80px;
     padding-bottom: 4rem;
-    padding-right: 6px;
     padding-left: 25px;
+    padding-right: 6px;
     align-content: center;
 }
 
-@media screen and (min-width: 1050px) and (max-width: 1400px) {
+/* | main=25px+700px+6px=731px | helpbox=350px - 500px | */
+/* min-width: 731px+ */
+
+@media screen and (min-width: calc(700px + 25px + 6px + 350px)) and (max-width: calc(700px + 25px + 6px + 500px)) {
     main {
-        margin-right: 350px;
+        margin-left: 0px;
+    }
+}
+@media screen and (min-width: calc(700px + 25px + 6px + 500px)) and (max-width: calc(700px + 25px + 6px + 500px + 500px)) {
+    main {
+        margin-right: 500px;
     }
 }
 
@@ -158,6 +166,13 @@ pluto-output pre {
     font-family: "Roboto Mono", monospace;
 }
 
+pluto-output hr {
+    border: none;
+    border-top: 3px solid rgba(0, 0, 0, 0.15);
+    margin-left: 0;
+    margin-right: 0;
+}
+
 pluto-output blockquote {
     margin-left: 1rem;
     margin-right: 1rem;
@@ -173,6 +188,87 @@ pluto-output blockquote {
     border-radius: 15px;
     background-color: #fafafa;
     color: #555;
+}
+
+pluto-output div.admonition {
+    border-radius: 8px;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+}
+pluto-output div.admonition .admonition-title {
+    font-family: "Vollkorn", sans-serif;
+    color: white;
+    font-weight: 600;
+    margin-block-end: 0px;
+    padding-left: 0.3em;
+}
+pluto-output div.admonition .admonition-title ~ * {
+    margin-block-end: 0.5em;
+    margin-block-start: 0.5em;
+    padding-left: 0.5em;
+}
+
+pluto-output div.admonition {
+    background: rgba(68, 149, 28, 0.2);
+    border: 5px solid rgba(68, 149, 28, 0.4);
+}
+pluto-output div.admonition .admonition-title {
+    background: rgba(68, 149, 28, 0.4);
+}
+pluto-output div.admonition.note,
+pluto-output div.admonition.info {
+    background: rgba(50, 115, 200, 0.2);
+    border: 5px solid rgba(50, 115, 200, 0.4);
+}
+pluto-output div.admonition.note .admonition-title,
+pluto-output div.admonition.info .admonition-title {
+    background: rgba(50, 115, 200, 0.4);
+}
+pluto-output div.admonition.warning {
+    background: rgba(162, 148, 30, 0.2);
+    border: 5px solid rgba(162, 148, 30, 0.4);
+}
+pluto-output div.admonition.warning .admonition-title {
+    background: rgba(162, 148, 30, 0.4);
+}
+pluto-output div.admonition.danger {
+    background: rgba(200, 67, 50, 0.2);
+    border: 5px solid rgba(200, 67, 50, 0.4);
+}
+pluto-output div.admonition.danger .admonition-title {
+    background: rgba(200, 67, 50, 0.4);
+}
+
+pluto-output div.footnote {
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+}
+
+pluto-output div.footnote p.footnote-title::before {
+    content: "[";
+}
+pluto-output div.footnote p.footnote-title::after {
+    content: "]: ";
+}
+pluto-output a.footnote,
+pluto-output div.footnote p.footnote-title {
+    font-family: "Roboto Mono", monospace;
+    font-size: 0.75rem;
+    font-weight: bold;
+    margin-block-end: 0px;
+    letter-spacing: -0.05em;
+    /* font-variant: small-caps; */
+}
+
+pluto-output div.footnote p.footnote-title ~ * {
+    margin-left: 0.1em;
+    padding-left: 0.4em;
+    border-left: 5px solid rgba(23, 115, 119, 0.15);
+    padding-bottom: var(--pluto-cell-spacing);
+    margin-block-end: 0px;
+}
+pluto-output div.footnote p:last-child {
+    padding-bottom: 0px;
 }
 
 pluto-output table {
@@ -793,7 +889,7 @@ pluto-runarea > span {
     display: inline-block;
     position: absolute;
     top: 1px;
-    right: 24px;
+    left: 22px;
     width: 45px;
 
     font-family: "Roboto Mono", monospace;
@@ -805,7 +901,7 @@ pluto-runarea > span {
 
 pluto-runarea > button.runcell {
     top: -1px;
-    right: 1px;
+    left: 1px;
 }
 
 pluto-runarea > button.runcell > span::after {
@@ -869,7 +965,7 @@ dropruler {
     display: none;
 }
 
-@media screen and (min-width: 1050px) {
+@media screen and (min-width: calc(700px + 25px + 6px + 350px)) {
     #helpbox-wrapper {
         display: block;
         position: sticky;
@@ -883,8 +979,8 @@ dropruler {
         position: absolute;
         display: flex;
         flex-direction: column;
-        width: 300px;
-        height: 400px;
+        width: calc(min(100vw - 50px - (700px + 25px + 6px), 450px));
+        height: min(50vh, 900px);
         /* overflow: hidden; */
         background-color: white;
         /* border: 2px solid darkgray; */
